--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -543,7 +543,9 @@ section h3{
     width: 90vw;
     margin: 0 auto;
     height: 50vh;/*si cambio esto tengo que cambiar los line-height*/
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #herramientas {/*creo que esto lo puedo sacar*/
@@ -554,12 +556,12 @@ section h3{
     
 }
 .bloque h1 {
-    margin: 0 3vw;
+  
+    margin: 3vw;
     color: #e7eaed;
     /*Esta es la altura fundamental para la imagen*/
-    line-height: 50vh;
-    text-align: center;
-    font-size: 3em;
+    /* line-height: 50vh; */
+    font-size: 2.5em;
     text-shadow: 3px 3px red;
 }
 
@@ -634,7 +636,11 @@ padding: 0 20px;
     font-size: 1rem;/*tamaño de la letra dentro de los campos*/
     outline: red solid 2px;/*línea de forde de cada campo*/
     border-radius: 10px;    
-    border: 5px solid #c7c7c7/*borde interno precio al rojo*/
+    border: 5px solid #c7c7c7;/*borde interno precio al rojo*/
+}
+
+.textArea{
+    height: 15vh;
 }
 
 .send-btn{
@@ -644,12 +650,12 @@ padding: 0 20px;
     background: pink;/*cambiar el color*/
     color: #8e0b0b;
     border: none;
-    padding: .7rem 1.5rem;
-    margin: .6rem 1rem;
+    padding: .7rem 1.5rem; 
+    /* margin: .6rem 1rem; */
     border-radius: 5px;
     cursor: pointer;
     transition: all .5 ease;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .send-btn:hover{
